--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,9 @@ dependencies:
   yandex_mapkit: 3.3.3
   geolocator: ^9.0.2
   geocoding: ^2.1.0
+  hive: 2.2.3
+  get_it: 7.6.0
+  path_provider: 2.1.0
 
 
 dev_dependencies:
