--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,9 @@ dependencies:
   hive: 2.2.3
   get_it: 7.6.0
   path_provider: 2.1.0
+  firebase_auth: ^4.8.0
+  firebase_core: ^2.15.1
+  pinput: ^2.2.12
 
 
 dev_dependencies:
