--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,8 @@ dependencies:
   yandex_mapkit: 3.3.3
   geolocator: ^9.0.2
   geocoding: ^2.1.0
-  hive: 2.2.3
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
   get_it: 7.6.0
   path_provider: 2.1.0
   firebase_auth: ^4.8.0
@@ -34,6 +35,9 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  hive_generator: ^2.0.0
+  build_runner: ^2.3.3
+
 flutter:
   uses-material-design: true
   assets:
