--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,8 +16,8 @@ dependencies:
   shimmer: ^3.0.0
   provider: ^6.0.5
   flutter_bloc: ^8.1.3
-  freezed_annotation: ^2.4.1
-  freezed: ^2.4.2
+#  freezed_annotation: ^2.4.1
+#  freezed: ^2.4.2
   permission_handler: 10.4.3
   yandex_mapkit: 3.3.3
   geolocator: ^9.0.2
@@ -29,6 +29,8 @@ dependencies:
   firebase_auth: ^4.8.0
   firebase_core: ^2.15.1
   pinput: ^2.2.12
+  floor: ^1.3.0
+  intl: ^0.17.0
 
 
 dev_dependencies:
@@ -36,7 +38,8 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^2.0.0
   hive_generator: ^2.0.0
-  build_runner: ^2.3.3
+  floor_generator: ^1.4.2
+  build_runner: ^2.1.2
 
 flutter:
   uses-material-design: true
