--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,10 @@ dependencies:
   pinput: ^2.2.12
   floor: ^1.3.0
   intl: ^0.17.0
+  flutter_share:
+  cached_network_image: ^3.2.3
+  url_launcher: ^6.1.12
+  fluttertoast: ^8.2.2
 
 
 dev_dependencies:
