--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   url_launcher: ^6.1.12
   fluttertoast: ^8.2.2
   maps_launcher: ^2.2.0
+  flutter_holo_date_picker: ^1.1.0
 
 
 dev_dependencies:
